Fix Flash Message Overlaps

--- a/app/assets/stylesheets/components/_flash.sass
+++ b/app/assets/stylesheets/components/_flash.sass
@@ -3,7 +3,7 @@
 .global-notices
   width: 100%
   overflow: hidden
-  position: absolute
+  position: relative
   box-shadow: $shadow
   padding: 0.5em $gutter
 
